--- a/tema1.html
+++ b/tema1.html
@@ -316,12 +316,25 @@
 
     </main> <!-- termina contenido principal-->
 
+
+    <article>
+        <header>
+            <hgroup>
+                <!-- Título del artículo con ícono -->
+                <h2> <img src="assets/images/memeword.jpeg" alt="cotorrea_JC" height="80px" width="auto"> La astucia del alumno</h2>
+                <!-- Fecha en la que se escribió el artículo -->
+                <h4>28/03/22</h4>
+            </hgroup>    
+        </header>
+    </article>
+
+
 <aside> <!--empieza barra lateral-->
     <h2>Microblogging</h2>
 
     <div class="tarjeta">
         <div class="info">
-            <img src="Assets/Images/Viga.png" alt="" height="100px" width="auto">
+            <img src="Assets/Images/Viga.png" alt="dandelion" height="100px" width="auto">
                 <div class="info2">
                     <span>El vídeo proporciona una manera eficaz para ayudarle a demostrar el punto. Cuando haga clic en Vídeo en línea, puede pegar el código para insertar del vídeo que desea agregar. También puede escribir una palabra clave para buscar en línea el vídeo que mejor se adapte a su documento.
                     Para otorgar a su documento un aspecto profesional, Word proporciona encabezados, pies de página, páginas de portada y diseños de cuadro de texto que se complementan entre sí. Por ejemplo, puede agregar una portada coincidente, el encabezado y la barra lateral. Haga clic en Insertar y elija los elementos que desee de las distintas galerías.
@@ -332,7 +345,7 @@
 
         <div class="tarjeta">
             <div class="info">
-                <img src="Assets/Images/Viga.png" alt="" height="100px" width="auto">
+                <img src="Assets/Images/Viga.png" alt="sick" height="100px" width="auto">
                     <div class="info2">
                         <span>
                             Los temas y estilos también ayudan a mantener su documento coordinado. Cuando haga clic en Diseño y seleccione un tema nuevo, cambiarán las imágenes, gráficos y gráficos SmartArt para que coincidan con el nuevo tema. Al aplicar los estilos, los títulos cambian para coincidir con el nuevo tema.
@@ -344,7 +357,7 @@
 
         <div class="tarjeta">
             <div class="info">
-                <img src="Assets/Images/Viga.png" alt="" height="100px" width="auto">
+                <img src="Assets/Images/Viga.png" alt="miau" height="100px" width="auto">
                     <div class="info2">
                         <span>
                         La lectura es más fácil, también, en la nueva vista de lectura. Puede contraer partes del documento y centrarse en el texto que desee. Si necesita detener la lectura antes de llegar al final, Word le recordará dónde dejó la lectura, incluso en otros dispositivos.
@@ -356,7 +369,7 @@
 
             <div class="tarjeta">
                 <div class="info">
-                    <img src="Assets/Images/Viga.png" alt="" height="100px" width="auto">
+                    <img src="Assets/Images/Viga.png" alt="siu" height="100px" width="auto">
                         <div class="info2"></div>
                             <span>
                             Para otorgar a su documento un aspecto profesional, Word proporciona encabezados, pies de página, páginas de portada y diseños de cuadro de texto que se complementan entre sí. Por ejemplo, puede agregar una portada coincidente, el encabezado y la barra lateral. Haga clic en Insertar y elija los elementos que desee de las distintas galerías.
@@ -368,7 +381,7 @@
 
         <div class="tarjeta">
             <div class="info">
-                    <img src="Assets/Images/Viga.png" alt="" height="100px" width="auto">
+                    <img src="Assets/Images/Viga.png" alt="lol" height="100px" width="auto">
                         <div class="info2"></div>
                             <span>
                             Ahorre tiempo en Word con nuevos botones que se muestran donde se necesiten. Para cambiar la forma en que se ajusta una imagen en el documento, haga clic y aparecerá un botón de opciones de diseño junto a la imagen. Cuando trabaje en una tabla, haga clic donde desee agregar una fila o columna y, a continuación, haga clic en el signo más.
@@ -378,7 +391,58 @@
             </div>
         </div>
 
-       
+<!--Las otras 5 entradas del MB-->
+
+<div class="tarjeta">
+    <div class="info">
+        <img src="Assets/Images/topologia.png" alt="silla" height="100px" width="auto">
+            <div class="info2">
+                <span>La optimización de topología es un método matemático que optimiza la disposición del material dentro de un espacio de diseño dado, para un conjunto determinado de cargas, condiciones de contorno y restricciones con el objetivo de maximizar el rendimiento del sistema.
+                </span>
+            </div>
+    </div>
+</div>
+
+<div class="tarjeta">
+    <div class="info">
+        <img src="Assets/Images/tensegrity2.webp" alt="chuck" height="100px" width="auto">
+            <div class="info2">
+                <span>El término tensegridad, proveniente del inglés tensegrity, es un término arquitectónico acuñado por Buckminster Fuller como contracción de tensional integrity (integridad tensional).
+                </span>
+            </div>
+    </div>
+</div>
+
+<div class="tarjeta">
+    <div class="info">
+        <img src="Assets/Images/beam.png" alt="buck" height="100px" width="auto">
+            <div class="info2">
+                <span>En la construcción de edificios, una viga es un miembro horizontal que atraviesa una abertura y soporta una carga que puede ser un muro de ladrillo o piedra sobre la abertura, en cuyo caso la viga a menudo se denomina dintel (ver sistema de poste y dintel).
+                </span>
+            </div>
+    </div>
+</div>
+
+<div class="tarjeta">
+    <div class="info">
+        <img src="Assets/Images/stress.webp" alt="luck" height="100px" width="auto">
+            <div class="info2">
+                <span>En la construcción de edificios, una viga es un miembro horizontal que atraviesa una abertura y soporta una carga que puede ser un muro de ladrillo o piedra sobre la abertura, en cuyo caso la viga a menudo se denomina dintel (ver sistema de poste y dintel).
+                </span>
+            </div>
+    </div>
+</div>
+
+<div class="tarjeta">
+    <div class="info">
+        <img src="Assets/Images/beam.png" alt="buck" height="100px" width="auto">
+            <div class="info2">
+                <span>Estrés: La fuerza de resistencia por unidad de área que ofrece un cuerpo contra la deformación se conoce como estrés. La fuerza externa que actúa sobre el cuerpo se llama carga o fuerza. La carga se aplica sobre el cuerpo mientras que la tensión se induce en el material del cuerpo.
+                </span>
+            </div>
+    </div>
+</div>
+
 
 </aside> <!--termina barra lateral-->
 
